tests/bad/no_return.kel
// Función no retorna en todas las rutas
fn buggy(x: int) -> int {
  if x > 0 {
    return 1
  }
}

fn main() {
  println(buggy(1))
}
